--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,7 @@
   <body>
     <ul class="list">
       <li id="duration" class="item disabled"></li>
-      <li id="pause" class="item nav-index" data-localize="pause">Pause</li>
+      <li id="pause" class="item nav-index">Pause</li>
     </ul>
     <ul id="actions" class="list">
       <li id="new" class="item nav-index" data-localize="new">New Session</li>
